@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_cover);
-use Test::More 'tests' => 13;
+use Test::More 'tests' => 14;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -62,5 +62,10 @@ is($ret, undef, 'Undefined cover after cleanup.');
 
 # Test.
 $input_cover = '(soubor) :';
+$ret = clean_cover($input_cover);
+is($ret, 'collective', encode_utf8("Cover '$input_cover' after cleanup."));
+
+# Test.
+$input_cover = '(soubor 2010) :';
 $ret = clean_cover($input_cover);
 is($ret, 'collective', encode_utf8("Cover '$input_cover' after cleanup."));
