@@ -1,4 +1,5 @@
 0.19
+ - Add another cover cleanup use case.
 
 0.18 2024-11-04T21:23:56+01:00
  - Add another edition number cleanup use case.
